# SupercellSWF-Animate

./: .gitignore  .gitmodules  LICENSE  README.md  biome.json  build.py  bundle.ts  clean  config.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
examples/: README.md
plugin/: .dist  .gitignore  CMakeLists.txt  Workspace.lua  build.ts  build_cmake.bat  package-lock.json  package.json  premake5.lua  tsconfig.json
plugin/AtlasGenerator/: .gitignore  premake5.lua
plugin/AtlasGenerator/src/: Main.cpp
plugin/UITest/: Main.cpp  premake5.lua
plugin/cmake/: dependencies.cmake
plugin/include/: DocType.h  Document.h  Ids.h  Localization.h  Macros.h  Publisher.h  Utils.h  Version.h
plugin/include/AnimateSDK/app/: ApplicationFCMPublicIDs.h  FlashFCMPublicIDs.h
plugin/include/AnimateSDK/core/: IFCMCallback.h  IFCMCalloc.h  IFCMClassFactory.h  IFCMDictionary.h  IFCMList.h  IFCMNoAggregationUnknown.h  IFCMNotificationClient.h  IFCMNotificationService.h  IFCMPair.h  IFCMPluginDictionary.h  IFCMStringUtils.h  IFCMUnknown.h
plugin/include/DocType/: DataTypes.h  DocType.h  FeatureMatrix.h
plugin/include/Document/: DocumentType.h  FeatureMatrix.h
plugin/include/FeatureMatrix/: FeatureMatrix.h  FeaturesTypes.h
plugin/include/Module/: AdobeWheelchair.h  AppContext.h  Config.h  Context.h  FCMClasses.h  FCM_Identifiers.h  Localization.h  PluginContext.h  PluginException.h  SessionConfig.h  SymbolContext.h  Version.h  Window.h
plugin/include/Module/Symbol/: SliceScalingData.h  SymbolContext.h
plugin/include/ProgressBar/: ProgressBar.h  ProgressBarApp.h
plugin/include/ProgressBar/Components/: StatusComponent.h
plugin/include/Publisher/: FrameGenerator.h  Publisher.h  PublisherConfig.h  ResourcePublisher.h  ShapeGenerator.h
plugin/include/Publisher/JSON/: JSONMovieclipWriter.h  JSONShapeWriter.h  JSONWriter.h
plugin/include/Publisher/SWF/: MovieclipWriter.h  ShapeWriter.h  Writer.h
plugin/include/Publisher/Shared/: SharedMovieclipWriter.h  SharedShapeWriter.h  SharedWriter.h
plugin/include/Publisher/TimelineBuilder/: Builder.h  FrameBuilder.h  LayerBuilder.h  TextField.h
plugin/include/ResourcePublisher/: ResourcePublisher.h
plugin/include/ResourcePublisher/SymbolGenerator/: GraphicGenerator.h  MovieClipGenerator.h  SymbolBehavior.h
plugin/include/ResourcePublisher/Writer/: AtlasGenerator.h  MovieclipWriter.h  ShapeWriter.h  Writer.h
plugin/include/SharedPublisher/: Publisher.h  ResourcePalette.h  TimelineBuilder.h  TimelineBuilderFactory.h
plugin/include/Ui/: PluginUI.h  Window.h
plugin/include/Ui/Components/: ErrorDialog.h  ProgressBar.h
plugin/include/Window/: PluginWindow.h  PluginWindowApp.h
plugin/include/Window/Components/: StatusComponent.h
plugin/include/Window/Events/: CreateProgress.h  DestroyProgress.h
plugin/include/Writers/Base/: OutputWriter.h  TimelineWriter.h
plugin/include/Writers/JSON/: JSONOutputWriter.h  JSONTimelineWriter.h
plugin/include/io/: Console.h
plugin/project/: generate_solution.bat  premake5.lua
plugin/project/win/: Plugin.vcxproj  Plugin.vcxproj.filters
plugin/project/win/Backup/: Plugin.sln  Plugin.vcxproj  Plugin.vcxproj.filters
plugin/res/: Features.json  Features.xml  FeaturesAllEnabled.json  FeaturesBackup.json  FeaturesHTML.json
plugin/res/locales/: en_EN.json  ru_RU.json
plugin/resources/: features.json
plugin/resources/locales/: en_EN.json  en_US.json  pl_PL.json  ru_RU.json
plugin/scripts/: generate.bat  update_submodule.bat
plugin/source/: Document.cpp  FCMPugin.cpp  Publisher.cpp
plugin/source/FeatureMatrix/: FeatureMatrix.cpp  FeaturesTypes.cpp
plugin/source/Module/: Localization.cpp  PluginContext.cpp  PluginException.cpp  SessionConfig.cpp  SymbolContext.cpp
plugin/source/Module/Symbol/: SliceScalingData.cpp  SymbolContext.cpp
plugin/source/Module/Wheelchair/: Wheelchair_WIN.cpp
plugin/source/ResourcePublisher/: ResourcePublisher.cpp
plugin/source/ResourcePublisher/SymbolGenerator/: GraphicGenerator.cpp  MovieClipGenerator.cpp
plugin/source/ResourcePublisher/Writer/: AtlasGenerator.cpp  MovieclipWriter.cpp  ShapeWriter.cpp  Writer.cpp
plugin/source/Window/: PluginWindow.cpp  PluginWindowApp.cpp
plugin/source/Window/Components/: ErrorDialog.cpp  StatusComponent.cpp
plugin/source/Window/Events/: DestroyProgress.cpp
plugin/src/: DocType.cpp  Document.cpp  FCMPugin.cpp  Main.cpp  OutputWriter.cpp  Publisher.cpp  Utils.cpp
plugin/src/DocType/: DataTypes.cpp  DocType.cpp  FeatureMatrix.cpp
plugin/src/Document/: DocumentType.cpp  FeatureMatrix.cpp  FeaturesTypes.cpp
plugin/src/FeatureMatrix/: FeatureMatrix.cpp
plugin/src/Module/: AppContext.cpp  Config.cpp  Context.cpp  Localization.cpp
plugin/src/ProgressBar/: ProgressBar.cpp  ProgressBarApp.cpp
plugin/src/ProgressBar/Components/: ErrorDialog.cpp  StatusComponent.cpp
plugin/src/Publisher/: FrameGenerator.cpp  Publisher.cpp  PublisherConfig.cpp  ResourcePublisher.cpp  ShapeGenerator.cpp
plugin/src/Publisher/JSON/: JSONMovieclipWriter.cpp  JSONShapeWriter.cpp
plugin/src/Publisher/SWF/: MovieclipWriter.cpp  ShapeWriter.cpp  Writer.cpp
plugin/src/Publisher/TimelineBuilder/: Builder.cpp  FrameBuilder.cpp  LayerBuilder.cpp
plugin/src/ResourcePublisher/: ResourcePublisher.cpp
plugin/src/ResourcePublisher/SymbolGenerator/: GraphicGenerator.cpp  MovieClipGenerator.cpp
plugin/src/SharedPublisher/: Publisher.cpp  ResourcePalette.cpp  TimelineBuilder.cpp  TimelineBuilderFactory.cpp
plugin/src/Ui/: PluginUI.cpp  Window.cpp
plugin/src/Ui/Components/: ErrorDialog.cpp  ProgressBar.cpp
plugin/src/Writers/JSON/: JSONOutputWriter.cpp  JSONTimelineWriter.cpp
plugin/src/include/: DocType.h  IOutputWriter.h  MyXmlParser.h  OutputWriter.h  Publisher.h  Utils.h  Version.h
plugin/supercell-flash-plugin/: CMakeLists.txt
plugin/supercell-flash-plugin/source/: FCMPugin.cpp  PluginConfiguration.h  Publisher.cpp  Publisher.h
plugin/supercell-flash-plugin/source/Module/: Config.cpp  Config.h  Localization.cpp  Localization.h  Module.cpp  Module.h  SCPluginException.cpp
(+380 files in other folders)
